# NeatDisk

./: Cargo.toml  README.md  build.rs  packager.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: app.rs  cleaner.rs  disk_analyzer.rs  hasher.rs  large_files.rs  license.rs  main.rs  scanner.rs  scheduler.rs  settings.rs  tray.rs  updater.rs
wix/: main.wxs
