[package]
name = "rust_duplicates"
version = "0.2.0"
edition = "2021"
authors = ["Emil Johansson <emil.a.johansson@gmail.com>"]
description = "Find and remove duplicate images from your photo library"
license = "proprietary"

[package.metadata.wix]
eula = false
upgrade-guid = "7F3A8B2C-4D1E-4F9A-B6C3-2E8D5A7F1B9C"

[dependencies]
walkdir = "2.3"
image = "0.24"
eframe = { version = "0.22", features = ["default_fonts", "glow"] }
egui = "0.22"
md5 = "0.7"
rayon = "1.7"
rfd = "0.11"
winapi = { version = "0.3", features = ["winuser", "windef"] }
trash = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
